message,friends components ready

--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -34,3 +34,8 @@
     padding-bottom: 15px;
     border-bottom: 1px solid rgba(0, 0, 0, 0.192);
 }
+
+.profile__avatar-picture{
+    width: 200px;
+    max-height: 300px;
+}
