--- a/src/components/PostItem/PostItem.css
+++ b/src/components/PostItem/PostItem.css
@@ -27,8 +27,8 @@
 
 .news__post__body{
     display: flex;
+    flex-direction: column;
     align-items: center;
-    flex-wrap: nowrap;
     justify-content: center;
 }
 
@@ -64,4 +64,15 @@
     display: flex;
     align-items: center;
     justify-content:center;
+}
+
+.new__post-image{
+    margin: 10px auto;
+}
+
+.new__post-text{
+    font-size: 0.7em;
+    color: inherit;
+    text-indent: 15px;
+    padding: 5px 8px;
 }
