--- a/src/components/LogInButton/LogInButton.css
+++ b/src/components/LogInButton/LogInButton.css
@@ -3,16 +3,15 @@
     color: var(--color-olive);
     border-radius: 25px;
     border: none;
-    font-size: 1em;
-    padding: 7px 12px;
+    font-size: 0.8em;
+    padding: 10px 15px;
     cursor: pointer;
+    text-transform: uppercase;
+    text-decoration: none;
+    font-weight: 600;
     transition: all .2s ease;
 }
 
 .login__button:hover{
-    box-shadow: 0px 0px 5px 1px rgb(255,255,255), 2px 2px 5px 1px rgb(0,0,0);
-    border-radius: 25px;
-    border: none;
-    font-size: 1em;
-    padding: 7px 12px;
+    box-shadow: 2px 2px 5px 1px rgb(0,0,0);
 }
